--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "这是一个集合了网易云、QQ音乐、酷狗音乐、酷我音乐以及bilibili音乐五大音乐平台的聚合服务平台，你可以使用这个平台去开发你想要的任意webapp...",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon ./src/index.js"
   },
   "repository": {
     "type": "git",
@@ -17,7 +17,15 @@
   },
   "homepage": "https://github.com/lzy-Jerry/music-server#readme",
   "dependencies": {
+    "axios": "^1.2.1",
+    "cheerio": "^1.0.0-rc.12",
+    "eslint-config-prettier": "^8.6.0",
     "koa": "^2.14.1",
     "koa-router": "^12.0.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.31.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-define-config": "^1.13.0"
   }
 }
