--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "eslint": "^8.31.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-define-config": "^1.13.0"
+    "eslint-define-config": "^1.13.0",
+    "lodash": "^4.17.21"
   }
 }
