--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint": "^8.31.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-define-config": "^1.13.0",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "qs": "^6.11.0"
   }
 }
